--- a/config.json
+++ b/config.json
@@ -1,5 +1,10 @@
 {
+    "Model": "CiliaTargetDetection.pt",
+    "Model Color Definition": {
+        "Cilia": [255, 0, 0],
+        "Nuclei": [0, 0, 255]
+    },
     "Minimal Confidence": 0.25,
     "Intersection over Union Threshold": 0.4,
-    "Brightness Decay Limit": 1
+    "Brightness Decay Limit": 1.0
 }
